@@ -152,6 +152,33 @@ BEGIN
                     NOT WS_BORDER
 END
 
+IDD_SETDETAILS DIALOGEX 0, 0, 222, 131
+STYLE DS_FIXEDSYS | WS_CHILD
+EXSTYLE WS_EX_CONTROLPARENT
+FONT 8, "MS Shell Dlg"
+BEGIN
+    EDITTEXT        IDC_FULLNAME,73,7,83,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_BIRTHDAY,73,20,83,12,ES_AUTOHSCROLL
+    COMBOBOX        IDC_SEX,73,32,83,12,CBS_DROPDOWNLIST | WS_VSCROLL | 
+                    WS_TABSTOP
+    EDITTEXT        IDC_CITY,73,47,83,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_COUNTRY,73,61,83,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PROVINCE,73,74,83,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_HOMEPHONE,73,87,83,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_OFFICEPHONE,73,101,83,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_HOMEPAGE,73,115,83,12,ES_AUTOHSCROLL
+    LTEXT           "Name :",IDC_STATIC,7,8,61,9
+    LTEXT           "Birthday :",IDC_STATIC,7,20,61,10
+    LTEXT           "Sex :",IDC_STATIC,7,34,61,9
+    LTEXT           "City :",IDC_STATIC,7,48,61,9
+    LTEXT           "Country",IDC_STATIC,7,62,61,9
+    LTEXT           "Province :",IDC_STATIC,7,75,61,9
+    LTEXT           "Home phone :",IDC_STATIC,7,88,61,9
+    LTEXT           "Office phone :",IDC_STATIC,7,102,61,9
+    LTEXT           "Homepage :",IDC_STATIC,7,117,61,9
+    PUSHBUTTON      "Save",IDC_SAVEDETAILS,168,114,45,14
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -207,6 +234,14 @@ BEGIN
     IDD_OPT_PROXY, DIALOG
     BEGIN
         BOTTOMMARGIN, 226
+    END
+
+    IDD_SETDETAILS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 220
+        TOPMARGIN, 4
+        BOTTOMMARGIN, 128
     END
 END
 #endif    // APSTUDIO_INVOKED
